--- a/material-ui/capacitor.config.json
+++ b/material-ui/capacitor.config.json
@@ -1,9 +1,9 @@
 {
-  "appId": "com.capacitorjs.examples.ionic",
-  "appName": "cap-ionic",
+  "appId": "com.capacitorjs.examples.materialui",
+  "appName": "cap-materialui",
   "bundledWebRuntime": false,
-  "npmClient": "npm",
-  "webDir": "build",
+  "npmClient": "yarn",
+  "webDir": "www",
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
