fix webdir path

--- a/material-ui/capacitor.config.json
+++ b/material-ui/capacitor.config.json
@@ -3,7 +3,7 @@
   "appName": "cap-materialui",
   "bundledWebRuntime": false,
   "npmClient": "yarn",
-  "webDir": "www",
+  "webDir": "build",
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
